basic tasks functioning no style

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Add a new task</h2>
+<h2>Edit My Task</h2>
 <%= render 'form', task: @task %>
 
 <p><%= link_to "Back to List", {:action => 'index' }%></p>
