--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+
 <h2>My tasks</h2>
 
 <% @tasks.each do |task| %>
@@ -5,6 +6,8 @@
     <li style=list-style:none>
       <%= check_box_tag 'task_ids[]', task.id %>
       <%= link_to task.title, task_path(task) %>
+      <%= link_to "Delete", task_path(task),
+      method: :delete, data: { confirm: "Are you sure?" } %>
     </li>
   </ul>
 <% end %>
