--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,3 +2,6 @@
 
   <h2><%= @tasks.title %></h2>
   <p><%= @tasks.details %></p>
+
+<p><%= link_to "Edit task", {:action => 'edit' }%></p>
+<p><%= link_to "Back to List", {:action => 'index' }%></p>
